--- a/TousLesCS/EcranAccueil/EcranAccueil.csproj
+++ b/TousLesCS/EcranAccueil/EcranAccueil.csproj
@@ -92,12 +92,6 @@
     <Compile Include="Accueil.Designer.cs">
       <DependentUpon>Accueil.cs</DependentUpon>
     </Compile>
-    <Compile Include="FenetreChoixBien.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FenetreChoixBien.Designer.cs">
-      <DependentUpon>FenetreChoixBien.cs</DependentUpon>
-    </Compile>
     <Compile Include="FicheDeSouhaits.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -161,6 +155,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RechercherClient.resx">
+      <DependentUpon>RechercherClient.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VueCommerciaux.resx">
       <DependentUpon>VueCommerciaux.cs</DependentUpon>
     </EmbeddedResource>
