--- a/TousLesCS/EcranAccueil/EcranAccueil.csproj
+++ b/TousLesCS/EcranAccueil/EcranAccueil.csproj
@@ -138,6 +138,9 @@
       <DependentUpon>AjoutClient.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="CatalogueBiens.resx">
+      <DependentUpon>CatalogueBiens.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="EditionCommercial.resx">
       <DependentUpon>EditionCommercial.cs</DependentUpon>
       <SubType>Designer</SubType>
