--- a/TousLesCS/EcranAccueil/EcranAccueil.csproj
+++ b/TousLesCS/EcranAccueil/EcranAccueil.csproj
@@ -33,6 +33,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="MySql.Data, Version=6.10.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.6.10.6\lib\net452\MySql.Data.dll</HintPath>
       <Private>True</Private>
@@ -45,6 +53,8 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing.Design" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -56,6 +66,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ACHETEUR.cs">
+      <DependentUpon>modeleBase.tt</DependentUpon>
+    </Compile>
     <Compile Include="AjoutBien.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -73,6 +86,12 @@
     </Compile>
     <Compile Include="AjouterClient.Designer.cs">
       <DependentUpon>AjouterClient.cs</DependentUpon>
+    </Compile>
+    <Compile Include="BIEN.cs">
+      <DependentUpon>modeleBase.tt</DependentUpon>
+    </Compile>
+    <Compile Include="COMMERCIAL.cs">
+      <DependentUpon>modeleBase.tt</DependentUpon>
     </Compile>
     <Compile Include="EditionCommercial.cs">
       <SubType>Form</SubType>
@@ -104,8 +123,32 @@
     <Compile Include="FicheDuBien.designer.cs">
       <DependentUpon>FicheDuBien.cs</DependentUpon>
     </Compile>
+    <Compile Include="FICHE_DE_SOUHAITS.cs">
+      <DependentUpon>modeleBase.tt</DependentUpon>
+    </Compile>
+    <Compile Include="modeleBase.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>modeleBase.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="modeleBase.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>modeleBase.tt</DependentUpon>
+    </Compile>
+    <Compile Include="modeleBase.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>modeleBase.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PROPOSITION_VISITE.cs">
+      <DependentUpon>modeleBase.tt</DependentUpon>
+    </Compile>
+    <Compile Include="RDV.cs">
+      <DependentUpon>modeleBase.tt</DependentUpon>
+    </Compile>
     <Compile Include="RechercheBien.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -117,6 +160,12 @@
     </Compile>
     <Compile Include="RechercherClient.Designer.cs">
       <DependentUpon>RechercherClient.cs</DependentUpon>
+    </Compile>
+    <Compile Include="VENDEUR.cs">
+      <DependentUpon>modeleBase.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VILLE.cs">
+      <DependentUpon>modeleBase.tt</DependentUpon>
     </Compile>
     <Compile Include="VueCommerciaux.cs">
       <SubType>Form</SubType>
@@ -161,6 +210,14 @@
     <EmbeddedResource Include="VueCommerciaux.resx">
       <DependentUpon>VueCommerciaux.cs</DependentUpon>
     </EmbeddedResource>
+    <EntityDeploy Include="modeleBase.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>modeleBase.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="modeleBase.edmx.diagram">
+      <DependentUpon>modeleBase.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -176,6 +233,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\unnamed.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="modeleBase.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>modeleBase.edmx</DependentUpon>
+      <LastGenOutput>modeleBase.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="modeleBase.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>modeleBase.edmx</DependentUpon>
+      <LastGenOutput>modeleBase.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
